<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="22"
    android:rowCount="23"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/miniLottoWybierzDateTetView"
        android:text="@string/data_poczatek_i_koniec"
        android:layout_columnSpan="22"
        android:layout_row="0"
        android:layout_column="0"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/popowiedz_do_daty"
        android:inputType="date"
        android:layout_columnSpan="10"
        android:id="@+id/miniLottoDataPierwszegoEditText"
        android:layout_row="2"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/popowiedz_do_daty"
        android:inputType="date"
        android:layout_columnSpan="10"
        android:id="@+id/miniLottoDataOstaniegoEditText"
        android:layout_row="2"
        android:layout_column="12" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/miniLottoPodajLiczbyTextView"
        android:text="@string/wybor_liczb"
        android:layout_columnSpan="22"
        android:layout_row="7"
        android:layout_column="0"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_rowSpan="3"
        android:id="@+id/miniLotto1Liczba"
        android:layout_row="8"
        android:layout_column="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_rowSpan="3"
        android:id="@+id/miniLotto2Liczba"
        android:layout_row="8"
        android:layout_column="4" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_rowSpan="3"
        android:id="@+id/miniLotto3Liczba"
        android:layout_row="8"
        android:layout_column="7" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_rowSpan="3"
        android:id="@+id/miniLotto4Liczba"
        android:layout_row="8"
        android:layout_column="10" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_rowSpan="3"
        android:id="@+id/miniLotto5Liczba"
        android:layout_row="8"
        android:layout_column="13" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/przycisk_anuluj"
        android:id="@+id/miniLottoCancelButton"
        android:onClick="miniLottoFinisActivity"
        android:layout_weight="1"
        android:layout_columnSpan="10"
        android:layout_row="18"
        android:layout_column="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/przycisk_ok"
        android:layout_columnSpan="10"
        android:id="@+id/miniLottoSaveButton"
        android:onClick="saveMiniLottoNumbers"
        android:layout_weight="1"
        android:layout_row="18"
        android:layout_column="12"/>


</GridLayout>