<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="22"
    android:rowCount="23"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_weight="1"
        android:id="@+id/lottoWybierzDateTetView"
        android:text="@string/data_poczatek_i_koniec"
        android:layout_columnSpan="22"
        android:layout_row="0"
        android:layout_column="0"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/popowiedz_do_daty"
        android:inputType="date"
        android:layout_columnSpan="10"
        android:id="@+id/lottoDataPierwszegoEditText"
        android:layout_row="2"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/popowiedz_do_daty"
        android:inputType="date"
        android:layout_columnSpan="10"
        android:id="@+id/lottoDataOstaniegoEditText"
        android:layout_row="2"
        android:layout_column="12" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/lottoIloscLiczbTextView"
        android:text="@string/wybor_ilosci_liczb"
        android:layout_columnSpan="22"
        android:layout_row="4"
        android:layout_column="0"/>
    <RadioGroup
        android:id="@+id/lottoGrupa"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="21">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6"
            android:checked="true"
            android:id="@+id/lotto6Radio" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7"
            android:id="@+id/lotto7Radio" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8"
            android:id="@+id/lotto8Radio"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9"
            android:id="@+id/lotto9Radio"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:id="@+id/lotto10Radio"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="11"
            android:id="@+id/lotto11Radio" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12"
            android:id="@+id/lotto12Radio" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/lottoPodajLiczbyTextView"
        android:text="@string/wybor_liczb"
        android:layout_columnSpan="22"
        android:layout_row="7"
        android:layout_column="0"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_rowSpan="3"
        android:id="@+id/lotto1Liczba"
        android:layout_row="8"
        android:layout_column="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_rowSpan="3"
        android:id="@+id/lotto2Liczba"
        android:layout_row="8"
        android:layout_column="4" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_rowSpan="3"
        android:id="@+id/lotto3Liczba"
        android:layout_row="8"
        android:layout_column="7" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_rowSpan="3"
        android:id="@+id/lotto4Liczba"
        android:layout_row="8"
        android:layout_column="10" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_rowSpan="3"
        android:id="@+id/lotto5Liczba"
        android:layout_row="8"
        android:layout_column="13" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_rowSpan="3"
        android:id="@+id/lotto6Liczba"
        android:layout_row="8"
        android:layout_column="16" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_rowSpan="3"
        android:id="@+id/lotto7Liczba"
        android:visibility="invisible"
        android:layout_row="12"
        android:layout_column="1" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_rowSpan="3"
        android:id="@+id/lotto8Liczba"
        android:visibility="invisible"
        android:layout_row="12"
        android:layout_column="4" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_rowSpan="3"
        android:id="@+id/lotto9Liczba"
        android:visibility="invisible"
        android:layout_row="12"
        android:layout_column="7" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_rowSpan="3"
        android:id="@+id/lotto10Liczba"
        android:visibility="invisible"
        android:layout_row="12"
        android:layout_column="10" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_rowSpan="3"
        android:id="@+id/lotto11Liczba"
        android:visibility="invisible"
        android:layout_row="12"
        android:layout_column="13" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_rowSpan="3"
        android:id="@+id/lotto12Liczba"
        android:visibility="invisible"
        android:layout_row="12"
        android:layout_column="16" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/przycisk_anuluj"
        android:onClick="lottoFinisActivity"
        android:id="@+id/lottoCancelButton"
        android:layout_weight="1"
        android:layout_columnSpan="10"
        android:layout_row="18"
        android:layout_column="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/przycisk_ok"
        android:layout_columnSpan="8"
        android:id="@+id/lottoSaveButton"
        android:onClick="saveLottoNumbers"
        android:layout_weight="1"
        android:layout_row="18"
        android:layout_column="13"/>


</GridLayout>